--- a/Wordlint.cabal
+++ b/Wordlint.cabal
@@ -34,7 +34,6 @@ maintainer:          gbgar@users.noreply.github.com
 copyright:           2014
 category:            Text
 build-type:          Simple
--- extra-source-files:  
 cabal-version:       >=1.10
 extra-doc-files:    doc/wordlint.haddock
 
@@ -46,3 +45,8 @@ executable wordlint
   -- hs-source-dirs:      
   default-language:    Haskell2010
   ghc-options:         -O2
+
+source-repository master
+  type:             git
+  location:         git://github.com/gbgar/Wordlint.git
+
