Fix cabal file per 'cabal check'

--- a/Wordlint.cabal
+++ b/Wordlint.cabal
@@ -46,7 +46,7 @@ executable wordlint
   default-language:    Haskell2010
   ghc-options:         -O2
 
-source-repository master
+source-repository head
   type:             git
   location:         git://github.com/gbgar/Wordlint.git
 
