--- a/Wordlint.cabal
+++ b/Wordlint.cabal
@@ -2,13 +2,13 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                Wordlint
-version:             0.1.0.2
+version:             0.2.0.0
 synopsis:            Plaintext prose redundancy linter.
 
 description:         Wordlint locates matching pairs of words repeated within a user-defined
                      distance.  Text may be linted by distance between words (that is, by word
-                     count), by line count, or by percentage of the total words in the file. For
-                     details on running the program, see README or the included man page.
+                     count), by line count, and/or by percentage of the total words in the file.
+                     For details on running the program, see README or the included man page.
 
                      Internally, Wordlint separates a text file (or stdin) into
                      a list of "Words", after processing user flags. An instance of the "Word"
@@ -20,18 +20,20 @@ description:         Wordlint locates matching pairs of words repeated within a 
                      length of the lemma. Next, items are matched by their lemma and exclusive
                      coordinates before being added to a list of "Wordpairs", a data structure
                      containing two Words and the difference between their respective "positions".
+                     If multiple types are specified, all Int positions are converted to the Double
+                     type and the resulting lists are intersected to produce the final results.
                      Finally, these Wordpairs are optionally filtered by the difference in their
                      positions (another user-specified option). All remaining Wordpairs are
                      processed for printing to stdout in machine-readable (default) or
                      human-readable format. A plugin also exists for integration with Vim 
-                     (https://github.com/gbgar/wordcheck.vim).
+                     (https:\/\/github.com\/gbgar\/wordcheck.vim).
 
 homepage:            https://github.com/gbgar/Wordlint
 license:             OtherLicense
 license-file:        LICENSE
 author:              GB Gardner
 maintainer:          gbgar@users.noreply.github.com
-copyright:           2014
+copyright:           2014-2015
 category:            Text
 build-type:          Simple
 cabal-version:       >=1.10
