--- a/Wordlint.cabal
+++ b/Wordlint.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                Wordlint
-version:             0.2.0.0
+version:             0.2.0.2
 synopsis:            Plaintext prose redundancy linter.
 
 description:         Wordlint locates matching pairs of words repeated within a user-defined
@@ -25,8 +25,9 @@ description:         Wordlint locates matching pairs of words repeated within a 
                      Finally, these Wordpairs are optionally filtered by the difference in their
                      positions (another user-specified option). All remaining Wordpairs are
                      processed for printing to stdout in machine-readable (default) or
-                     human-readable format. A plugin also exists for integration with Vim 
-                     (https:\/\/github.com\/gbgar\/wordcheck.vim).
+                     human-readable format. Plugins exist for integration with Vim 
+                     (https:\/\/github.com\/gbgar\/Wordlint.vim) and Emacs
+                     (https:\/\/github.com\/gbgar\/wordlint.el).
 
 homepage:            https://github.com/gbgar/Wordlint
 license:             OtherLicense
@@ -42,11 +43,10 @@ extra-doc-files:    doc/Wordlint.haddock
                     man/man1/wordlint.1
 
 executable wordlint
+  hs-source-dirs:      src
   main-is:             Wordlint.hs
-  -- other-modules:       
   other-extensions:    DeriveDataTypeable
-  build-depends:       base >=4.7 && <4.8, cmdargs >=0.10 && <0.11, boxes >=0.1 && <0.2
-  -- hs-source-dirs:      
+  build-depends:       base >=4.7 && <4.8, cmdargs >=0.10.0 && <0.11.0, boxes >=0.1 && <0.2
   default-language:    Haskell2010
   ghc-options:         -O2
 
