--- a/Wordlint.cabal
+++ b/Wordlint.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                Wordlint
-version:             0.2.0.3
+version:             0.2.0.4
 synopsis:            Plaintext prose redundancy linter.
 
 description:         Wordlint locates matching pairs of words repeated within a user-defined
@@ -41,10 +41,16 @@ cabal-version:       >=1.10
 extra-source-files: changelog
 extra-doc-files:    doc/Wordlint.haddock
                     man/man1/wordlint.1
+library
+  hs-source-dirs:      src
+  exposed-modules:       Wordlint.Args, Wordlint.Linters, Wordlint.Output, Wordlint.Wordpairs, Wordlint.Words
+  build-depends:       base >=4.7 && <4.8, cmdargs >=0.10.0 && <0.11.0, boxes >=0.1 && <0.2
+  default-language:    Haskell2010
 
 executable wordlint
-  hs-source-dirs:      src, src/Wordlint
+  hs-source-dirs:      src
   main-is:             Wordlint.hs
+  other-modules:       Wordlint.Args, Wordlint.Linters, Wordlint.Output, Wordlint.Wordpairs, Wordlint.Words
   other-extensions:    DeriveDataTypeable
   build-depends:       base >=4.7 && <4.8, cmdargs >=0.10.0 && <0.11.0, boxes >=0.1 && <0.2
   default-language:    Haskell2010
