--- a/Wordlint.cabal
+++ b/Wordlint.cabal
@@ -43,14 +43,14 @@ extra-doc-files:    doc/Wordlint.haddock
                     man/man1/wordlint.1
 library
   hs-source-dirs:      src
-  exposed-modules:       Wordlint.Args, Wordlint.Linters, Wordlint.Output, Wordlint.Wordpairs, Wordlint.Words
+  exposed-modules:     Text.Wordlint.Args, Text.Wordlint.Linters, Text.Wordlint.Output, Text.Wordlint.Wordpairs, Text.Wordlint.Words
   build-depends:       base >=4.7 && <4.8, cmdargs >=0.10.0 && <0.11.0, boxes >=0.1 && <0.2
   default-language:    Haskell2010
 
 executable wordlint
   hs-source-dirs:      src
   main-is:             Wordlint.hs
-  other-modules:       Wordlint.Args, Wordlint.Linters, Wordlint.Output, Wordlint.Wordpairs, Wordlint.Words
+  other-modules:       Text.Wordlint.Args, Text.Wordlint.Linters, Text.Wordlint.Output, Text.Wordlint.Wordpairs, Text.Wordlint.Words
   other-extensions:    DeriveDataTypeable
   build-depends:       base >=4.7 && <4.8, cmdargs >=0.10.0 && <0.11.0, boxes >=0.1 && <0.2
   default-language:    Haskell2010
