--- a/Wordlint.cabal
+++ b/Wordlint.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                Wordlint
-version:             0.2.1.0
+version:             0.2.1.1
 synopsis:            Plaintext prose redundancy linter.
 
 description:         Wordlint locates matching pairs of words repeated within a user-defined
@@ -34,17 +34,17 @@ license:             OtherLicense
 license-file:        LICENSE
 author:              GB Gardner
 maintainer:          gbgar@users.noreply.github.com
-copyright:           2014-2015
+copyright:           2014-2016
 category:            Text
 build-type:          Simple
-cabal-version:       >=1.10
+cabal-version:       >=1.20
 extra-source-files: changelog
 extra-doc-files:    doc/Wordlint.haddock
                     man/man1/wordlint.1
 library
   hs-source-dirs:      src
   exposed-modules:     Text.Wordlint.Args, Text.Wordlint.Linters, Text.Wordlint.Output, Text.Wordlint.Wordpairs, Text.Wordlint.Words
-  build-depends:       base, cmdargs >=0.10.0 && <0.11.0, boxes >=0.1 && <0.2
+  build-depends:       base >= 4.8.0.0, cmdargs >=0.10.0 && <0.11.0, boxes >=0.1 && <0.2
   default-language:    Haskell2010
 
 executable wordlint
@@ -52,11 +52,10 @@ executable wordlint
   main-is:             Wordlint.hs
   other-modules:       Text.Wordlint.Args, Text.Wordlint.Linters, Text.Wordlint.Output, Text.Wordlint.Wordpairs, Text.Wordlint.Words
   other-extensions:    DeriveDataTypeable
-  build-depends:       base, cmdargs >=0.10.0 && <0.11.0, boxes >=0.1 && <0.2
+  build-depends:       base >= 4.8.0.0, cmdargs >=0.10.0 && <0.11.0, boxes >=0.1 && <0.2
   default-language:    Haskell2010
   ghc-options:         -O2
 
 source-repository head
   type:             git
   location:         git://github.com/gbgar/Wordlint.git
-
